@@ -1,6 +1,7 @@
 @echo off
 setlocal
+set OPT=-Xss8192K --enable-native-access=ALL-UNNAMED
 set BASE=%USERPROFILE%\git\util\target
 set CP=%BASE%\classes;%BASE%\dependency\*
-java -cp %CP% saka1029.util.declisp.Main %*
+java %OPT% -cp %CP% saka1029.util.declisp.Main %*
 endlocal
